<resources>
    <string name="app_name">PopularMovies_S2</string>
    <string name="release_date">Release Date:</string>
    <string name="user_rating_average">User Rating Average:</string>
    <string name="plot_synopsis">Plot Synopsis:</string>
    <string name="api_ky_msg">No API key  set,please set the MOVIEDB_API_KEY in MainGridActivity!</string>
    <string name="no_connection_msg">Not connected to the internet</string>
    <string name="img_root">http://image.tmdb.org/t/p/w185</string>
    <string name="wait_msg">Please wait…</string>
    <string name="sort_by_most_popular">Sort By: Most Popular</string>
    <string name="sort_by_top_rated">Sort By: Top Rated</string>
    <string name="st2">start</string>
    <string name="sort_part_popular">movie/popular</string>
    <string name="sort_part_rated">movie/top_rated</string>
    <string name="sort_part_default">movie/popular</string>
    <string name="url_1">http://api.themoviedb.org/3/</string>
    <string name="trailer_url_1">http://api.themoviedb.org/3/movie/</string>
    <string name="trailer_url_2">/videos?api_key=</string>
    <string name="url_2">\?api_key=</string>
    <string name="read_buffer_msg">start reading input stream</string>
    <string name="error_connect_api_msg">cannot connect to moviedb</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trailer_image">trailer</string>
    <string name="movie_trailers">Movie Trailers:</string>
    <string name="movie_reviews">Movie Reviews:</string>
    <string name="review_url_2">/reviews?api_key=</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="favorite_list_display">Favorite List Display</string>
    <string name="added_to_favorite_msg">Movie was added to favorite list</string>
    <string name="removed_from_favorite_msg">Movie has been removed from favorite list</string>
    <string name="share">Share Trailer</string>
    <string name="share_trailer">Share Trailer using</string>
    <string name="review_by">Review By : </string>
    <string name="no_player_available_msg">No video player is available!</string>
    <string name="no_text_app_msg">no texting app available !</string>
    <string name="youtube_video_path">https://www.youtube.com/watch?v=</string>
</resources>
