<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:id="@+id/scroll"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingStart="@dimen/linear_pd_lrft"
        android:paddingLeft="@dimen/linear_pd_lrft"
        android:paddingRight="@dimen/ln_pd_right"
        android:paddingEnd="@dimen/ln_pd_right" android:freezesText="true">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tv_title_margin"
            android:layout_marginTop="@dimen/tv_title_margin"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            android:freezesText="true"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingStart="@dimen/hlinear_pd_st"
            android:paddingLeft="@dimen/hlinear_pd_st"
            android:paddingRight="@dimen/hlinear_pd_end"
            android:paddingEnd="@dimen/hlinear_pd_end">

            <ImageView
                android:id="@+id/im_imageView"
                android:layout_width="@dimen/img_layout_width"
                android:layout_height="@dimen/img_layout_height"
                android:adjustViewBounds="true"
                android:gravity="top"
                android:minHeight="@dimen/img_min_height"
                android:minWidth="@dimen/img_min_width"
                tools:ignore="ContentDescription" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="@dimen/vlinear_pd_st"
                android:paddingLeft="@dimen/vlinear_pd_st"
                android:orientation="vertical"
                tools:ignore="RtlSymmetry">
                <ToggleButton android:freezesText="true"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="30dp"
                    android:paddingRight="30dp"
                    android:layout_gravity="start"
                    android:id="@+id/myToggleButton"
                    android:width="40dp"
                    android:height="40dp"
                    android:background="#00ffffff"

                    android:textOn=""
                    android:textOff=""
                    android:layout_height="40dp"
                    android:layout_width="40dp"/>




                <TextView
                    android:id="@+id/tv_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:text="@string/release_date"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:freezesText="true"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_vote_average_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_rating_average"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/tv_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:requiresFadingEdge="horizontal"
                    android:text=""
                    android:freezesText="true"
                    android:textColor="@android:color/white" />



            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_plot_synopsis_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/plot_synopsis"
            android:textColor="@android:color/holo_blue_dark" />



        <TextView
            android:id="@+id/tv_plot_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:freezesText="true"/>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" android:freezesText="true"
       >
        <TextView
            android:id="@+id/tv_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/movie_trailers"

            android:textColor="@android:color/holo_blue_dark" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/share"
            android:gravity="center"
            android:id="@+id/trailer_share"
            android:padding="5dp" />
    </LinearLayout>
        <fragment
            android:id="@+id/fragment2"
            android:name="com.sallyezzat.popularmovies_s2.fragments.TrailersFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/movie_reviews"
            android:textColor="@android:color/holo_blue_dark" />

        <fragment
            android:id="@+id/fragment3"
            android:name="com.sallyezzat.popularmovies_s2.fragments.ReviewsFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>


</ScrollView>